# lagrange

./: .clang-format  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  Depends-Android.cmake  Depends-iOS.cmake  Depends.cmake  Embed.cmake  LICENSE.md  README.md  Resources.cmake  build-tui.sh  sdl2-macos-ios.diff  sdl2-macos-mouse-scrolling-patch.diff  sdl2-macos-mouse-scrolling.diff  sdl2.0.18-macos-ios.diff  sdl2.26-macos-ios.diff
.github/: FUNDING.yml
.github/workflows/: build.yml
.github/workflows/docker-debian/: action.yml  debian-dockerfile  entrypoint.sh
cmake/: BuildType.cmake  Depends.cmake  Resources.cmake
debian/: README.Debian  changelog  control  copyright  rules
ios/: cmake-ios-lagrange.sh  cmake-ios-tf.sh  cross-mac-arm64-ios-arm64.ini  deps.sh  iconfigure-osminver.patch
po/: ar.po  ca.po  compile.py  cs.po  de.po  en.po  eo.po  es.po  es_MX.po  eu.po  fi.po  fr.po  gl.po  hu.po  ia.po  ie.po  isv.po  it.po  ja.po  lt.po  nl.po  pl.po  pt_BR.po  ru.po  sgs.po  sk.po  sr.po  sv.po  tok.po  tr.po  uk.po  zh_Hans.po  zh_Hant.po
res/: CMakeLists.txt  Embed.cmake  Fontpack.cmake  Lagrange.icns  LaunchScreen.storyboard  MacOSXBundleInfo.plist.in  PrivacyInfo.xcprivacy  about.gmi  arg-help.txt  bincat.c  bincat.sh  fi.skyjake.Lagrange.appdata.xml  fontpack.ini  help.gmi  iOSBundleInfo.plist.in  lagrange.1  lagrange.1.md  lagrange.rc.in  macos-system-fonts.ini  makeman.sh  urlopen.bat
res/about/: about.gmi  android-help.gmi  android-version.gmi  help.gmi  ios-help.gmi  ios-version.gmi  lagrange.gmi  license.gmi  version-0.13.gmi  version-1.10.gmi  version-1.5.gmi  version.gmi
res/arabic.fontpack/: fontpack.ini
res/cjk.fontpack/: fontpack.ini
res/default.fontpack/: fontpack.ini
res/firasans.fontpack/: fontpack.ini
res/fonts/: LICENSE_Literata.txt  LICENSE_SmolEmoji.txt  fontpack.ini
res/literata.fontpack/: fontpack.ini
res/nunito.fontpack/: fontpack.ini
res/tinos.fontpack/: fontpack.ini
src/: android.c  android.h  app.c  app.h  bookmarks.c  bookmarks.h  defs.h  export.c  export.h  feeds.c  feeds.h  fontpack.c  fontpack.h  gemini.h  gempub.c  gempub.h  gmcerts.c  gmcerts.h  gmdocument.c  gmdocument.h  gmrequest.c  gmrequest.h  gmtypesetter.c  gmtypesetter.h  gmutil.c  gmutil.h  gopher.c  gopher.h  guppy.c  guppy.h  history.c  history.h  ios.h  ios.m  ipc.c  ipc.h  lang.c  lang.h  lookup.c  lookup.h  (+29 more)
src/audio/: buf.c  buf.h  player.c  player.h  stb_vorbis.c
src/ui/: banner.c  banner.h  bindingswidget.c  bindingswidget.h  certimportwidget.c  certimportwidget.h  certlistwidget.c  certlistwidget.h  color.c  color.h  command.c  command.h  documentview.c  documentview.h  documentwidget.c  documentwidget.h  font.c  font.h  indicatorwidget.c  indicatorwidget.h  inputwidget.c  inputwidget.h  keys.c  keys.h  labelwidget.c  labelwidget.h  linkinfo.c  linkinfo.h  listwidget.c  listwidget.h  lookupwidget.c  lookupwidget.h  macos.h  macos.m  mediaui.c  mediaui.h  metrics.c  metrics.h  mobile.c  mobile.h  (+32 more)
